--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/gnehs/rndimg#readme",
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "cheerio": "^1.0.0-rc.3",
     "koa": "^2.7.0",
     "koa-json": "^2.0.2",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "node-schedule": "^1.3.2",
     "path": "^0.12.7",
     "request": "^2.88.0",
